@@ -520,6 +520,117 @@ name|toString
 argument_list|()
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|o
+parameter_list|)
+block|{
+if|if
+condition|(
+name|this
+operator|==
+name|o
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+name|o
+operator|==
+literal|null
+operator|||
+name|getClass
+argument_list|()
+operator|!=
+name|o
+operator|.
+name|getClass
+argument_list|()
+condition|)
+return|return
+literal|false
+return|;
+name|Explanation
+name|that
+init|=
+operator|(
+name|Explanation
+operator|)
+name|o
+decl_stmt|;
+return|return
+name|match
+operator|==
+name|that
+operator|.
+name|match
+operator|&&
+name|Float
+operator|.
+name|compare
+argument_list|(
+name|that
+operator|.
+name|value
+argument_list|,
+name|value
+argument_list|)
+operator|==
+literal|0
+operator|&&
+name|Objects
+operator|.
+name|equals
+argument_list|(
+name|description
+argument_list|,
+name|that
+operator|.
+name|description
+argument_list|)
+operator|&&
+name|Objects
+operator|.
+name|equals
+argument_list|(
+name|details
+argument_list|,
+name|that
+operator|.
+name|details
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+return|return
+name|Objects
+operator|.
+name|hash
+argument_list|(
+name|match
+argument_list|,
+name|value
+argument_list|,
+name|description
+argument_list|,
+name|details
+argument_list|)
+return|;
+block|}
 block|}
 end_class
 
