@@ -40,6 +40,16 @@ name|Term
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
 begin_comment
 comment|/**  * TestExplanations subclass focusing on basic query types  */
 end_comment
@@ -7388,6 +7398,253 @@ literal|2
 block|,
 literal|3
 block|}
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testEquality
+specifier|public
+name|void
+name|testEquality
+parameter_list|()
+block|{
+name|Explanation
+name|e1
+init|=
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"an explanation"
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e2
+init|=
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"an explanation"
+argument_list|,
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"a subexplanation"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e25
+init|=
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"an explanation"
+argument_list|,
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"a subexplanation"
+argument_list|,
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"a subsubexplanation"
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e3
+init|=
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"an explanation"
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e4
+init|=
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|2f
+argument_list|,
+literal|"an explanation"
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e5
+init|=
+name|Explanation
+operator|.
+name|noMatch
+argument_list|(
+literal|"an explanation"
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e6
+init|=
+name|Explanation
+operator|.
+name|noMatch
+argument_list|(
+literal|"an explanation"
+argument_list|,
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"a subexplanation"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e7
+init|=
+name|Explanation
+operator|.
+name|noMatch
+argument_list|(
+literal|"an explanation"
+argument_list|)
+decl_stmt|;
+name|Explanation
+name|e8
+init|=
+name|Explanation
+operator|.
+name|match
+argument_list|(
+literal|1f
+argument_list|,
+literal|"another explanation"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|e1
+argument_list|,
+name|e3
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|e1
+operator|.
+name|equals
+argument_list|(
+name|e2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|e2
+operator|.
+name|equals
+argument_list|(
+name|e25
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|e1
+operator|.
+name|equals
+argument_list|(
+name|e4
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|e1
+operator|.
+name|equals
+argument_list|(
+name|e5
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|e5
+argument_list|,
+name|e7
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|e5
+operator|.
+name|equals
+argument_list|(
+name|e6
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|e1
+operator|.
+name|equals
+argument_list|(
+name|e8
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|e1
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|e3
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|e5
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|e7
+operator|.
+name|hashCode
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
